Updated this action to use reference export

--- a/bulk_export_action.info.yml
+++ b/bulk_export_action.info.yml
@@ -5,5 +5,5 @@ package: Custom
 core: 8.x
 core_version_requirement: ^8 || ^9
 dependencies:
-  - default_content
+  - default_content_deploy
   - views_bulk_operations
